--- a/todo/templates/todo/add_item.html
+++ b/todo/templates/todo/add_item.html
@@ -12,22 +12,30 @@
 </head>
 
 <body>
-    <h1>Things I need to do</h1>
+    <h1>Add a todo item:</h1>
+    <form method="POST" action="add">
+        <!--template tag - security measure - posting info in django-->
+        {% csrf_token %}
+        <div>
+            <p>
+                <label for="id_name">Name: </label>
+                <input type="text" id="id_name" name="item_name" />
+            </p>
+        </div>
+        <div>
+            <p>
+                <label for="id_name">Done: </label>
+                <input type="checkbox" id="id_done" name="done" />
+            </p>
+        </div>
+        <div>
+            <p>
+                <button type="submit">Add Item</button>
+            </p>
+        </div>
+    </form>
 
-    <table>
-        {% for item in items %}
-        <tr>
-            {% if item.done %}
-                <td><strike>{{ item.name }}</strike></td>
-            {% else %}
-                <td>{{ item.name }}</td>
-            {% endif %}
-        </tr>
-    {% empty %}
-    <tr><td>You have nothing to do!</td></tr>
-    {% endfor %}
-    </table>
-    <a href="/add">Add an Item</a>
+   
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
