prepared to deploy to heroku

--- a/todo/templates/todo/edit_item.html
+++ b/todo/templates/todo/edit_item.html
@@ -12,14 +12,14 @@
 </head>
 
 <body>
-    <h1>Add a todo item:</h1>
-    <form method="POST" action="add">
+    <h1>Edit a todo item:</h1>
+    <form method="POST">
         <!--template tag - security measure - posting info in django-->
         {% csrf_token %}
         {{ form.as_p }}
         <div>
             <p>
-                <button type="submit">Add Item</button>
+                <button type="submit">Update Item</button>
             </p>
         </div>
     </form>
